[gd_scene load_steps=11 format=3 uid="uid://cy3r5ixcra171"]

[ext_resource type="Script" uid="uid://bkvb1du41rufh" path="res://scripts/singletons/mods/modsWindow.gd" id="1_3smad"]
[ext_resource type="Theme" uid="uid://bvfthh0vm4fbp" path="res://resources/uiTheme.tres" id="1_gbm3x"]
[ext_resource type="Texture2D" uid="uid://ero2whmx4t0r" path="res://assets/ui/mods/icon/Refactored.png" id="3_ug10a"]
[ext_resource type="Script" uid="uid://bbobuvxxcunyk" path="res://scripts/singletons/mods/selectMods.gd" id="3_wdxyk"]
[ext_resource type="FontFile" uid="uid://c1cbi8by5johg" path="res://resources/fonts/fTalk.fnt" id="4_iypae"]
[ext_resource type="FontFile" uid="uid://cjub6sxbu8elx" path="res://resources/fonts/RobotoMono-SemiBold.ttf" id="5_iduno"]
[ext_resource type="FontFile" uid="uid://bdml4ely61msn" path="res://resources/fonts/fTalkSmall.fnt" id="5_pjwfn"]
[ext_resource type="Script" uid="uid://ctlk52enhxg8l" path="res://scripts/singletons/mods/findProblems.gd" id="8_yb2h5"]

[sub_resource type="LabelSettings" id="LabelSettings_iduno"]
font = ExtResource("4_iypae")
font_size = 12

[sub_resource type="LabelSettings" id="LabelSettings_ug10a"]
font = ExtResource("5_pjwfn")
font_size = 10

[node name="modsWindow" type="Window"]
oversampling_override = 1.0
title = "Select Mods"
initial_position = 2
size = Vector2i(640, 400)
transient = true
theme = ExtResource("1_gbm3x")
script = ExtResource("1_3smad")

[node name="selectMods" type="PanelContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 1
script = ExtResource("3_wdxyk")

[node name="c" type="HBoxContainer" parent="selectMods"]
layout_mode = 2

[node name="c" type="VBoxContainer" parent="selectMods/c"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.9

[node name="c" type="HBoxContainer" parent="selectMods/c/c"]
layout_mode = 2

[node name="l" type="Label" parent="selectMods/c/c/c"]
layout_mode = 2
text = "Modpack: "

[node name="modpacks" type="OptionButton" parent="selectMods/c/c/c"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="versionsLabel" type="Label" parent="selectMods/c/c/c"]
unique_name_in_owner = true
layout_mode = 2
text = "Version:"

[node name="versions" type="OptionButton" parent="selectMods/c/c/c"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="sep" type="HSeparator" parent="selectMods/c/c"]
layout_mode = 2

[node name="c2" type="ScrollContainer" parent="selectMods/c/c"]
layout_mode = 2
size_flags_vertical = 3

[node name="mods" type="VBoxContainer" parent="selectMods/c/c/c2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="sep" type="VSeparator" parent="selectMods/c"]
layout_mode = 2

[node name="c2" type="MarginContainer" parent="selectMods/c"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="c2" type="VBoxContainer" parent="selectMods/c/c2"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="scroll" type="ScrollContainer" parent="selectMods/c/c2/c2"]
layout_mode = 2
size_flags_vertical = 3

[node name="c" type="VBoxContainer" parent="selectMods/c/c2/c2/scroll"]
layout_mode = 2
size_flags_horizontal = 3

[node name="info" type="VBoxContainer" parent="selectMods/c/c2/c2/scroll/c"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="infoName" type="Label" parent="selectMods/c/c2/c2/scroll/c/info"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
text = "Title of the thing"
label_settings = SubResource("LabelSettings_iduno")
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 3

[node name="sep" type="HSeparator" parent="selectMods/c/c2/c2/scroll/c/info"]
layout_mode = 2
theme_type_variation = &"HSeparatorFancy"

[node name="modpackInfo" type="VBoxContainer" parent="selectMods/c/c2/c2/scroll/c/info"]
unique_name_in_owner = true
layout_mode = 2

[node name="infoIcon" type="TextureRect" parent="selectMods/c/c2/c2/scroll/c/info/modpackInfo"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("3_ug10a")

[node name="sep" type="HSeparator" parent="selectMods/c/c2/c2/scroll/c/info/modpackInfo"]
layout_mode = 2
theme_type_variation = &"HSeparatorFancy"

[node name="infoDescription" type="Label" parent="selectMods/c/c2/c2/scroll/c/info"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Info paragraph"
label_settings = SubResource("LabelSettings_ug10a")
autowrap_mode = 2

[node name="versionInfo" type="VBoxContainer" parent="selectMods/c/c2/c2/scroll/c/info"]
unique_name_in_owner = true
layout_mode = 2

[node name="sep" type="HSeparator" parent="selectMods/c/c2/c2/scroll/c/info/versionInfo"]
layout_mode = 2
theme_type_variation = &"HSeparatorFancy"

[node name="version" type="RichTextLabel" parent="selectMods/c/c2/c2/scroll/c/info/versionInfo"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("5_iduno")
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "Version: "
fit_content = true
horizontal_alignment = 1

[node name="versionDescription" type="Label" parent="selectMods/c/c2/c2/scroll/c/info/versionInfo"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "Version paragraph"
label_settings = SubResource("LabelSettings_ug10a")
autowrap_mode = 2

[node name="noModpackInfo" type="VBoxContainer" parent="selectMods/c/c2/c2/scroll/c"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="l" type="Label" parent="selectMods/c/c2/c2/scroll/c/noModpackInfo"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "
Mods selected do not fit any existing modpack.
Exporting to .room.gmx will not be posible."
label_settings = SubResource("LabelSettings_ug10a")
horizontal_alignment = 1
autowrap_mode = 2

[node name="buttons" type="VBoxContainer" parent="selectMods/c/c2/c2"]
layout_mode = 2

[node name="sep" type="HSeparator" parent="selectMods/c/c2/c2/buttons"]
layout_mode = 2
theme_type_variation = &"HSeparatorFancy"

[node name="HBoxContainer" type="HBoxContainer" parent="selectMods/c/c2/c2/buttons"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="cancelButton" type="Button" parent="selectMods/c/c2/c2/buttons/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"RadioButtonText"
text = "Close"

[node name="nextButton" type="Button" parent="selectMods/c/c2/c2/buttons/HBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_type_variation = &"RadioButtonText"
text = "Next
"

[node name="findProblems" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_yb2h5")

[node name="c" type="HBoxContainer" parent="findProblems"]
layout_mode = 2

[node name="c" type="HBoxContainer" parent="findProblems/c"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.9

[node name="c" type="VBoxContainer" parent="findProblems/c/c"]
layout_mode = 2
size_flags_horizontal = 3

[node name="modsAddedLabel" type="Label" parent="findProblems/c/c/c"]
layout_mode = 2
text = "Mods Added"
horizontal_alignment = 1

[node name="sep" type="HSeparator" parent="findProblems/c/c/c"]
layout_mode = 2

[node name="modsAdded" type="VBoxContainer" parent="findProblems/c/c/c"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="sep" type="VSeparator" parent="findProblems/c/c"]
layout_mode = 2

[node name="c2" type="VBoxContainer" parent="findProblems/c/c"]
layout_mode = 2
size_flags_horizontal = 3

[node name="modsRemovedLabel" type="Label" parent="findProblems/c/c/c2"]
layout_mode = 2
text = "Mods Removed"
horizontal_alignment = 1

[node name="sep" type="HSeparator" parent="findProblems/c/c/c2"]
layout_mode = 2

[node name="modsRemoved" type="VBoxContainer" parent="findProblems/c/c/c2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="sep" type="VSeparator" parent="findProblems/c"]
layout_mode = 2

[node name="c2" type="MarginContainer" parent="findProblems/c"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="c" type="ScrollContainer" parent="findProblems/c/c2"]
layout_mode = 2

[node name="c" type="VBoxContainer" parent="findProblems/c/c2/c"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="modName" type="Label" parent="findProblems/c/c2/c/c"]
unique_name_in_owner = true
layout_mode = 2
text = "Title of the thing"
label_settings = SubResource("LabelSettings_iduno")
horizontal_alignment = 1
vertical_alignment = 2

[node name="HSeparator" type="HSeparator" parent="findProblems/c/c2/c/c"]
layout_mode = 2
theme_type_variation = &"HSeparatorFancy"

[node name="problemsLabel" type="Label" parent="findProblems/c/c2/c/c"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "
No problems here"
label_settings = SubResource("LabelSettings_ug10a")
horizontal_alignment = 1
autowrap_mode = 2

[node name="problems" type="VBoxContainer" parent="findProblems/c/c2/c/c"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="buttons" type="HBoxContainer" parent="findProblems/c/c2/c/c"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="problemsCancel" type="Button" parent="findProblems/c/c2/c/c/buttons"]
layout_mode = 2
theme_type_variation = &"RadioButtonText"
text = "Back"

[node name="saveChanges" type="Button" parent="findProblems/c/c2/c/c/buttons"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"RadioButtonText"
text = "Save Changes"

[connection signal="close_requested" from="." to="." method="_close"]
[connection signal="item_selected" from="selectMods/c/c/c/modpacks" to="selectMods" method="_modpackSelected"]
[connection signal="meta_clicked" from="selectMods/c/c2/c2/scroll/c/info/versionInfo/version" to="." method="_linkClicked"]
[connection signal="pressed" from="selectMods/c/c2/c2/buttons/HBoxContainer/cancelButton" to="." method="_close"]
[connection signal="pressed" from="selectMods/c/c2/c2/buttons/HBoxContainer/nextButton" to="." method="_next"]
[connection signal="pressed" from="findProblems/c/c2/c/c/buttons/problemsCancel" to="." method="_back"]
[connection signal="pressed" from="findProblems/c/c2/c/c/buttons/saveChanges" to="." method="_saveChanges"]
